// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogoText component > Size > Large 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-size: 32px;
  font-weight: 600;
  font-style: italic;
  color: #333;
}

.c0 span {
  color: #ff7705;
}

<div
  class="c0"
  data-testid="LogoText"
>
  Remin
  <span>
    Dee
  </span>
</div>
`;

exports[`LogoText component > Size > Small 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  font-weight: 600;
  font-style: italic;
  color: #333;
}

.c0 span {
  color: #ff7705;
}

<div
  class="c0"
  data-testid="LogoText"
>
  Remin
  <span>
    Dee
  </span>
</div>
`;
